# vchat-backend

./: .gitignore  Cargo.toml  Rocket.toml
api/: Cargo.toml
api/src/: lib.rs
entity/: Cargo.toml
entity/src/: lib.rs  message.rs  prelude.rs  room.rs  user.rs
migration/src/: lib.rs  m20231006_000001_create_user_table.rs  m20231006_000002_create_room_table.rs  m20231006_000003_create_message_table.rs
service/: Cargo.toml
service/src/: controller.rs  cors.rs  db.rs  errors.rs  lib.rs  routes.rs  states.rs
service/src/controller/: auth.rs  jwt.rs  message.rs  room.rs  user.rs
service/src/routes/: auth.rs  message.rs  room.rs  user.rs
src/: cors.rs  main.rs  states.rs
