[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
rocket = { version="=0.5.0-rc.3", features = ["json", "secrets"] }
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

entity = { path = "../entity" }
migration = {path = "../migration" }
